--- a/public/exit-ticket.html
+++ b/public/exit-ticket.html
@@ -5,14 +5,14 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-    <meta name="google-signin-client_id" content="894443099779-1vcg0g99jntsdq3rmni2u31l5bbd2ito.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="613159943615-hadat0m6hsnaaelh14o5hra7fv5huosf.apps.googleusercontent.com">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">  
   <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
   <script>
   window.onLoadCallback = function(){
     gapi.auth2.init({
-        client_id: '894443099779-1vcg0g99jntsdq3rmni2u31l5bbd2ito.apps.googleusercontent.com'
+        client_id: '613159943615-hadat0m6hsnaaelh14o5hra7fv5huosf.apps.googleusercontent.com'
       });
   }
   </script>
@@ -74,51 +74,51 @@
             <small>Please include the following in your application.</small>
             <div class="question-answer checkbox-item">
               <div>
-                <input type="checkbox" value="none" id="check_1" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_1" name="checklist"/>
                 <label for="check_1" class="check"><span>Google Classroom</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_2" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_2" name="checklist"/>
                 <label for="check_2" class="check"><span>OneNote</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_3" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_3" name="checklist"/>
                 <label for="check_3" class="check"><span>Paper Notebook</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_4" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_4" name="checklist"/>
                 <label for="check_4" class="check"><span>Worksheet</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_5" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_5" name="checklist"/>
                 <label for="check_5" class="check"><span>Written Notes</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_6" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_6" name="checklist"/>
                 <label for="check_6" class="check"><span>Class Activity</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_7" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_7" name="checklist"/>
                 <label for="check_7" class="check"><span>Calculator</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_8" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_8" name="checklist"/>
                 <label for="check_8" class="check"><span>Workbook</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_9" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_9" name="checklist"/>
                 <label for="check_9" class="check"><span>Whiteboard</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_10" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_10" name="checklist"/>
                 <label for="check_10" class="check"><span>Class Discussion</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_11" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_11" name="checklist"/>
                 <label for="check_11" class="check"><span>PantherPortal</span></label>
               </div>
               <div style="display:inline-block">
-                <input type="checkbox" value="none" id="check_other" name="checklist" required/>
+                <input type="checkbox" value="none" id="check_other" name="checklist"/>
                 <input type="text" name="check_other" />
               </div>
             </div>
@@ -215,7 +215,7 @@
         <br>
         <br>
         <div class="btn-block">
-            <button id="submit" type="submit" href="/">Submit</button>
+            <button id="submit" type="submit">Submit</button>
         </div>
       </form>
     </div>
@@ -226,12 +226,20 @@
 <!-- Import and configure the Firebase SDK -->
 <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
 <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
-<script src="/__/firebase/7.6.2/firebase-app.js"></script>
-<script src="/__/firebase/7.6.2/firebase-auth.js"></script>
-<script src="/__/firebase/7.6.2/firebase-storage.js"></script>
-<script src="/__/firebase/7.6.2/firebase-messaging.js"></script>
-<script src="/__/firebase/7.6.2/firebase-firestore.js"></script>
-<script src="/__/firebase/7.6.2/firebase-performance.js"></script>
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/7.9.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
+<script src="/__/firebase/7.9.1/firebase-auth.js"></script>
+<script src="/__/firebase/7.9.1/firebase-storage.js"></script>
+<script src="/__/firebase/7.9.1/firebase-messaging.js"></script>
+<script src="/__/firebase/7.9.1/firebase-firestore.js"></script>
+<script src="/__/firebase/7.9.1/firebase-performance.js"></script>
 <script src="/__/firebase/init.js"></script>
 
 <script src="scripts/main.js"></script>
