--- a/public/exit-ticket.html
+++ b/public/exit-ticket.html
@@ -215,7 +215,7 @@
         <br>
         <br>
         <div class="btn-block">
-            <button id="submit" type="submit">Submit</button>
+            <button id="submit">Submit</button>
         </div>
       </form>
     </div>
