Checklist id='' >> 'check', but possible corruption of checkboxes

--- a/public/exit-ticket.html
+++ b/public/exit-ticket.html
@@ -72,53 +72,53 @@
         <div class="question">
             <h2>What did you use? (select all that apply)<span class="required">*</span></h2>
             <small>Please include the following in your application.</small>
-            <div class="question-answer checkbox-item">
+            <div class="question-answer">
               <div>
-                <input type="checkbox" value="none" id="check_1" name="checklist"/>
+                <input type="checkbox" value="Google Classroom" id="check" name="checklist"/>
                 <label for="check_1" class="check"><span>Google Classroom</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_2" name="checklist"/>
+                <input type="checkbox" value="OneNote" id="check" name="checklist"/>
                 <label for="check_2" class="check"><span>OneNote</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_3" name="checklist"/>
+                <input type="checkbox" value="Paper Notebook" id="check" name="checklist"/>
                 <label for="check_3" class="check"><span>Paper Notebook</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_4" name="checklist"/>
+                <input type="checkbox" value="Worksheet" id="check" name="checklist"/>
                 <label for="check_4" class="check"><span>Worksheet</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_5" name="checklist"/>
+                <input type="checkbox" value="Written Notes" id="check" name="checklist"/>
                 <label for="check_5" class="check"><span>Written Notes</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_6" name="checklist"/>
+                <input type="checkbox" value="Class Activity" id="check" name="checklist"/>
                 <label for="check_6" class="check"><span>Class Activity</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_7" name="checklist"/>
+                <input type="checkbox" value="Calculator" id="check" name="checklist"/>
                 <label for="check_7" class="check"><span>Calculator</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_8" name="checklist"/>
+                <input type="checkbox" value="Workbook" id="check" name="checklist"/>
                 <label for="check_8" class="check"><span>Workbook</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_9" name="checklist"/>
+                <input type="checkbox" value="Whiteboard" id="check" name="checklist"/>
                 <label for="check_9" class="check"><span>Whiteboard</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_10" name="checklist"/>
+                <input type="checkbox" value="Class Discussion" id="check" name="checklist"/>
                 <label for="check_10" class="check"><span>Class Discussion</span></label>
               </div>
               <div>
-                <input type="checkbox" value="none" id="check_11" name="checklist"/>
+                <input type="checkbox" value="PantherPortal" id="check" name="checklist"/>
                 <label for="check_11" class="check"><span>PantherPortal</span></label>
               </div>
               <div style="display:inline-block">
-                <input type="checkbox" value="none" id="check_other" name="checklist"/>
+                <input type="checkbox" value="Other:" id="check_other" name="checklist"/>
                 <input type="text" name="check_other" />
               </div>
             </div>
@@ -158,49 +158,48 @@
                         <label align="center">I still need help</label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="1" id="rating_radio_1" name="rating" required/>
+                        <input type="radio" value="1" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_1" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="2" id="rating_radio_2" name="rating" required/>
+                        <input type="radio" value="2" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_2" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="3" id="rating_radio_3" name="rating" required/>
+                        <input type="radio" value="3" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_3" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="4" id="rating_radio_4" name="rating" required/>
+                        <input type="radio" value="4" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_4" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="5" id="rating_radio_5" name="rating" required/>
+                        <input type="radio" value="5" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_5" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="6" id="rating_radio_6" name="rating" required/>
+                        <input type="radio" value="6" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_6" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="7" id="rating_radio_7" name="rating" required/>
+                        <input type="radio" value="7" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_7" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="8" id="rating_radio_8" name="rating" required/>
+                        <input type="radio" value="8" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_8" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="9" id="rating_radio_9" name="rating" required/>
+                        <input type="radio" value="9" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_9" class="radio"><span></span></label>
                     </td>
                     <td style="text-align: right;">
-                        <input type="radio" value="10" id="rating_radio_10" name="rating" required/>
+                        <input type="radio" value="10" id="rating_radio" name="rating" required/>
                         <label for="rating_radio_10" class="radio"><span></span></label>
                     </td>
                     <td class="last-col">
                         <label>I could teach someone else</label>
                     </td>
-
                   </tr>
               </table>
           </div>
@@ -215,7 +214,7 @@
         <br>
         <br>
         <div class="btn-block">
-            <button id="submit">Submit</button>
+            <button id="submit" type="">Submit</button>
         </div>
       </form>
     </div>
