--- a/public/exit-ticket.html
+++ b/public/exit-ticket.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">  
   <script src="https://apis.google.com/js/platform.js?onload=onLoadCallback" async defer></script>
+  <!--
   <script>
   window.onLoadCallback = function(){
     gapi.auth2.init({
@@ -16,11 +17,12 @@
       });
   }
   </script>
+  -->
 
   </head>
   <body>
     <div class="sign-in-header" align="center">
-      <div id="sign-in" class="g-signin2" hidden></div>
+      <button id="sign-in" hidden>Sign in</button>
       <img class="profile-image" id="profile_img" src="#" hidden/>
       <br>
       <button id="sign-out" href="#" onclick="signOut()" hidden>Sign out</button>
