--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
   </head>
   <body>
     <div class="sign-in-header" align="center">
-      <div id="sign-in" class="g-signin2" hidden></div>
+      <button id="sign-in" hidden></button>
       <img class="profile-image" id="profile_img" src="#" hidden/>
       <br>
       <button id="sign-out" href="#" hidden>Sign out</button>
