Full working version of Check-in complete with notification to (singular) teacher.

--- a/public/check-in.html
+++ b/public/check-in.html
@@ -118,6 +118,9 @@
         </div>
       </form>
     </div>
+    <div class="btn-block">
+        <button id="teacher">Teachers click here to enable notifications</button>
+    </div>
   </body>
 
 <!-- Import and configure the Firebase SDK -->
