Added modals and cleared inputs when forms are submitted

--- a/public/check-in.html
+++ b/public/check-in.html
@@ -20,7 +20,7 @@
     </div>
     <div class="testbox">
 
-      <form action="#" id="check-in">
+      <form action="#" id="check-in" onsubmit="return false">
         <h1>Check-in</h1>
         <p>Welcome to class!</p>
         <h2>What is your first name?</h2>
@@ -114,12 +114,23 @@
         </div>
         <br>
         <div class="btn-block">
-            <button id="submit" type="submit">Submit</button>
+            <button id="submit">Submit</button>
         </div>
       </form>
     </div>
     <div class="btn-block">
         <button id="teacher">Teachers click here to enable notifications</button>
+    </div>
+
+    <!-- The Modal -->
+    <div id="confirmation" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Thank you for submitting your check-in!</p>
+      </div>
+
     </div>
   </body>
 
