--- a/public/exit-ticket.html
+++ b/public/exit-ticket.html
@@ -19,7 +19,7 @@
       <button id="sign-out" href="#" onclick="signOut()" hidden>Sign out</button>
     </div>
     <div class="testbox">
-      <form id="exit-ticket-form" action="#" onsubmit="onExitTicketFormSubmit()">
+      <form id="exit-ticket-form" action="#" onsubmit="return false">
         <h1>Class Exit Ticket</h1>
         <p>You did an AWESOME job in class today. Let me know what you did, how you felt, and how we can do better tomorrow!</p>
         <h2>What is your first name?</h2>
@@ -80,11 +80,12 @@
               <div>
                 <input type="checkbox" value="PantherPortal" id="check_11" name="checklist"/>
                 <label for="check_11" class="check"><span>PantherPortal</span></label>
-              </div>
+            <!--
               <div style="display:inline-block">
                 <input type="checkbox" value="Other:" id="check_other" name="checklist"/>
-                <input type="text" name="check_other" />
+                <input type="text" name="check_other"/>
               </div>
+            -->
             </div>
         </div>
         <div class="question">
@@ -178,9 +179,20 @@
         <br>
         <br>
         <div class="btn-block">
-            <button id="submita" type="submit">Submit</button>
+            <button id="submit-exit-ticket">Submit</button>
         </div>
       </form>
+    </div>
+
+    <!-- The Modal -->
+    <div id="confirmation" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Thank you for submitting your check-in!</p>
+      </div>
+
     </div>
   </body>
 
