Multi-user Update v1.0
- Users able to define role on login
- All users now created in a user collection
- All check-ins make record of 'class'
- Teachers able to create classes
- Students able to subscribe to classes
- Notifications send only to teachers subscribed to that same class

TODO:
 - Allow for removal of classes by teachers and students
 - Clean up visual styling
 - Prevent duplicate class codes from being used

--- a/public/check-in.html
+++ b/public/check-in.html
@@ -160,9 +160,11 @@
     <div id="role-modal" class="modal" hidden>
       <div class="modal-content" style="align-items: center">
         <span class="close">&times;</span>
-        <h2 id="hello-name">Hello!</h2>
-        <h3>It looks like this is your first time logging in. Please select your role:</h3>
-        <p>If you have logged in before, feel free to close this and use the sign-in button.</p>
+        <div id="welcome-dialog">
+          <h2 id="hello-name">Hello!</h2>
+          <h3>It looks like this is your first time logging in. Please select your role:</h3>
+          <p>If you have logged in before, feel free to close this and use the sign-in button.</p>
+        </div>
         <div style='align-content: center'>
           <div style="align-content: center">
             <button id="role-teacher-button" style="margin: 1.5em">Teacher</button>
