Changed 'let Mr. L know' to 'teacher' and began adding code for displaying recent check-ins

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,12 @@
     				<th>Class code</th>
     			</tr>
        		</table>
+       		<table align="center" id="recent-check-in-response-table">
+    			<tr>
+    				<th>Class name</th>
+    				<th>Class code</th>
+    			</tr>
+       		</table>
     	</div>	
 
 	    <!-- Check-in Form View-->
@@ -143,7 +149,7 @@
 		        </div>
 		        <br>
 		        <div class="question">
-		            <h2>Is there anything you want Mr. Lehenbauer to know?</h2>
+		            <h2>Is there anything you want your teacher to know?</h2>
 		            <div class="question-answer">
 		                <input type="text" name="need-to-know" id="need-to-know"/>
 		            </div>
