Added recent check-in information on data view.
TODO:
 - reduce the amount of reads on the db
 - cache data?

--- a/public/index.html
+++ b/public/index.html
@@ -54,18 +54,25 @@
         </div>
 
     	<div id="data-content" hidden>
-    		<table align="center" id="class-name-code-table">
-    			<tr>
-    				<th>Class name</th>
-    				<th>Class code</th>
-    			</tr>
-       		</table>
-       		<table align="center" id="recent-check-in-response-table">
-    			<tr>
-    				<th>Class name</th>
-    				<th>Class code</th>
-    			</tr>
-       		</table>
+    		<div id="class-code-list">
+    			<h3>Class Codes</h3>
+	    		<table id="class-name-code-table">
+	    			<tr>
+	    				<th>Class name</th>
+	    				<th>Class code</th>
+	    			</tr>
+	       		</table>
+	       	</div>
+    		<div id="recent-check-in-list" align="center">
+    			<h3>Recent Check-ins</h3>
+	       		<table id="recent-check-in-response-table">
+	    			<tr>
+	    				<th>Student</th>
+	    				<th>Rating</th>
+	    				<th>Date and Time</th>
+	    			</tr>
+	       		</table>
+	       	</div>
     	</div>	
 
 	    <!-- Check-in Form View-->
